# SMS_client

./: .gitignore  Makefile  README.md  config.toml  pyproject.toml
src/: config_loader.py  logger.py  main.py  sms_client.py
tests/: tests.py
