[tool.poetry]
name = "sms-client"
version = "0.1.0"
description = "CLI client for sending SMS messages"

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
flake8 = "^6.1.0"
black = "^23.3.0"